# maumau

./: CMakeLists.txt  _clang-format
CMake/: scripts.cmake
mauGame/: CMakeLists.txt
mauGame/src/: main.cpp
mauLib/: CMakeLists.txt
mauLib/core/: CardDeck.cpp  Dealer.cpp  GameMaster.cpp  GameState.cpp
mauLib/include/mau/core/: CardDeck.h  Dealer.h  GameMaster.h  GameState.h
mauLib/include/mau/player/: IPlayer.h
mauLib/player/: IPlayer.cpp
src/: CardDeck.cpp  CardDeck.h  Dealer.cpp  Dealer.h  Defs.h  GameState.cpp  GameState.h  main.cpp
